--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,6 +1,6 @@
 server {                                       
     listen 80;
-    server_name dinamikidaviddad.myftp.biz 158.160.225.152
+    server_name dinamikidaviddad.myftp.biz 158.160.225.152;
 
     location /api/ {                              
         proxy_pass http://backend:8000/api/;
